--- a/meet-landing-page/scss/layouts/_footer.scss
+++ b/meet-landing-page/scss/layouts/_footer.scss
@@ -4,18 +4,19 @@
 .footer {
   position: relative;
   color: $color-white;
-  overflow: hidden;
   z-index: 1;
 
   &__background {
     position: absolute;
     inset: 0;
     z-index: 0;
+    overflow: hidden;
     
     img {
       width: 100%;
       height: 100%;
       object-fit: cover;
+      display: block;
     }
   }
 
